# MeWhileLearningOpenGL

./: CMakeLists.txt  Camera.cpp  Camera.h  README.md  RenderQueue.cpp  RenderQueue.h  Shader.cpp  Shader.h  bufferLog.cpp  bufferLog.h  glad.c  main.cpp  stb_image.cpp
Shapes/: RegPolygon.cpp  RegPolygon.h  Shape.cpp  Shape.h  ShapeTypes.h
include/glad/: glad.h
shaders/: fragShader.frag  vertShader.vert
shaders-old/: shaders-old.cpp  shaders-old.h
utils/CoordinateSystem/: CoordinateSystem.cpp  CoordinateSystem.h
utils/color/: Color.cpp  Color.h
utils/point/: Point.cpp  Point.h
